Revert "Attempt to fix spacing issues"
This reverts commit dfb5fa600667133514ebecabc3182c736e8a96a1.

--- a/Buff Movies/style.css
+++ b/Buff Movies/style.css
@@ -346,9 +346,8 @@ left: 50%;
     width: 260px;
     height: 400px;
     left: 500px;
-    bottom: 150px;
+    bottom: 550px;
     overflow: hidden;
-
 
     border: 1px solid black;  
 }
@@ -476,19 +475,5 @@ left: 50%;
 position: absolute;
 left: 100px;
 bottom: 100px;
-
-}
-
-
-.p {
-
-   position: absolute;
-    width: 300px;
-   
-    left: 320px;
-    bottom: 219px;
-    overflow: hidden;  /* Crop it like it's hot! */
-
-     border: 1px solid black;
 
 }
